--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <iframe id="output"></iframe>
             </div>
         </div>
-        <div class="footer"><h3>Editor By: Helly</h3></div>
+        <div class="footer"><h3>SwiftEdit By: Helly</h3></div>
     <script>
         function run() {
             let htmlcode = document.getElementById("html-code").value;
